[project]
name = "2026-p1-keys-i"
version = "0.1.0"
description = "A basic TODO app with no actual functionality"
authors = [
    {name = "Keys",email = "70819367+keys-i@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
